fix :  added column gap in display cards

--- a/docs/index.css
+++ b/docs/index.css
@@ -113,6 +113,7 @@ body{
     padding: 2rem 1rem;
     margin: 3rem auto;
     text-align: center;
+    row-gap: 4rem;
 }
 
 @media screen and (max-width: 1024px) {
